# test-aws-devbox

./: .gitignore  LICENSE  README.md  pyproject.toml
project-init/: config.yaml
test_aws_devbox/: __init__.py  version.py
xp/backend/local/: backend.yaml
xp/backend/local/state/g/s3_backend/.pulumi/backups/global/: global.1650477262921942475.json  global.1650477262921942475.json.attrs  global.1650477823112156423.json  global.1650477929396927888.json
xp/backend/local/state/g/s3_backend/.pulumi/history/global/: global-1650477262921472381.history.json  global-1650477262921472381.history.json.attrs  global-1650477823111867642.checkpoint.json.attrs  global-1650477823111867642.history.json  global-1650477823111867642.history.json.attrs  global-1650477929396554734.history.json  global-1650477929396554734.history.json.attrs
xp/backend/local/state/g/s3_backend/.pulumi/stacks/: global.json  global.json.attrs
xp/backend/s3/: backend.yaml
xp/project/awsenv/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  xpulumi-project.yaml
xp/project/datavol/: Pulumi.dev.yaml  __main__.py
xp/project/devbox/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  xpulumi-project.yaml
xp/project/s3_backend/: Pulumi.global.yaml  __main__.py  xpulumi-project.yaml
